<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">


    <RelativeLayout
        android:id="@+id/mainRelative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp">

        <RelativeLayout
            android:id="@+id/secondRelative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/initialSum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:text="@string/initial_sum"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/valueEur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10sp"
                android:layout_toEndOf="@+id/initialSum"
                android:text="@string/value_eur"
                android:textSize="22sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/valueUsd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/valueEur"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10sp"
                android:layout_toEndOf="@+id/initialSum"
                android:text="@string/value_usd"
                android:textSize="22sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/valueJpy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/valueUsd"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/initialSum"
                android:text="@string/value_jpy"
                android:textSize="22sp"
                android:textStyle="italic" />


            <EditText
                android:id="@+id/amountToConvert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/valueJpy"
                android:ems="10"
                android:hint="@string/amount"
                android:inputType="textPersonName|number"
                android:windowSoftInputMode="stateHidden|adjustResize" />

            <Spinner
                android:id="@+id/convertFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/amountToConvert"
                android:layout_margin="10sp" />

            <!--<Button-->
                <!--android:id="@+id/switchButton"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_below="@+id/convertFrom"-->
                <!--android:background="@android:color/transparent"-->
                <!--android:drawableStart="@android:drawable/ic_popup_sync"-->
                <!--android:text="@string/switch_currencies"-->
                <!--android:textSize="12sp" />-->

            <Spinner
                android:id="@+id/convertTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/convertFrom"
                android:layout_margin="10sp" />

            <Button
                android:id="@+id/convertButton"
                android:layout_width="match_parent"
                android:layout_height="70sp"
                android:layout_below="@+id/convertTo"
                android:layout_margin="10sp"
                android:drawableStart="@android:drawable/ic_menu_rotate"
                android:text="@string/convert"
                android:textSize="16sp" />

        </RelativeLayout>


        <LinearLayout
            android:id="@+id/firstLinear"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/secondRelative"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/result1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="22sp" />

            <TextView
                android:id="@+id/result2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text=""
                android:textSize="22sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/firstLinear"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:id="@+id/result3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text=""
                    android:textAlignment="center"
                    android:textSize="22sp" />
            </LinearLayout>

            <Button
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="25dp"
                android:paddingTop="15dp"
                android:paddingRight="25dp"
                android:paddingBottom="15dp"
                android:text="@string/clear"
                android:textAllCaps="true"
                android:textSize="16sp" />

        </LinearLayout>


    </RelativeLayout>
</ScrollView>